Gnome-shell v40+: Fix misaligned 'Do no disturb' button

--- a/gnome-shell/v40/gnome-shell.css
+++ b/gnome-shell/v40/gnome-shell.css
@@ -17,7 +17,6 @@ stage {
   icon-shadow: 0 1px black;
   border: 1px solid #161819;
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px; }
   .button:focus, .app-folder-dialog .edit-folder-button:focus {
     color: #f7b922;
@@ -978,22 +977,6 @@ StScrollBar {
   width: 31.5em; }
   .message-list .message-title, .message-list .message-content, .message-list .message-body {
     color: #848e9c; }
-
-.message-list-clear-button.button {
-  color: #929ba8;
-  background-color: #040405;
-  box-shadow: none;
-  border: 1px solid #161819;
-  text-shadow: 0 1px black;
-  icon-shadow: 0 1px black;
-  border: 1px solid #161819;
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    color: #f7b922;
-    background-color: #09090b;
-    border: 1px solid #161819;
-    text-shadow: 0 1px black;
-    icon-shadow: 0 1px black; }
 
 .message-list-sections {
   spacing: 1em; }
